# heiDPI_benchmark

./: .gitignore  CMakeLists.txt  README.md  config.yml  pyproject.toml  requirements.txt
benchmark/: CMakeLists.txt  analyze_profile.py  benchmark  config.json  config.yml  heiDPI_logger_mock.py  heiDPI_logger_profiler.py  scenarios.json  sequenz_diagramm.puml
benchmark/include/: analyzer.h  config.h  generator.h  logger_launcher.h  sample_queue.h  scenario.h  status.h  switcher.h  watcher.h
benchmark/src/: analyzer.cpp  config.cpp  generator.cpp  logger_launcher.cpp  main.cpp  scenario.cpp  status.cpp  switcher.cpp  watcher.cpp
benchmark_results/: flow_event_idle_cpp_1.json  flow_event_idle_cpp_1.json.watch  flow_event_idle_cpp_2.json  flow_event_idle_cpp_2.json.watch  flow_event_idle_cpp_3.json  flow_event_idle_cpp_3.json.watch  flow_event_idle_python_1.json  flow_event_idle_python_1.json.watch  flow_event_idle_python_2.json  flow_event_idle_python_2.json.watch  flow_event_idle_python_3.json  flow_event_idle_python_3.json.watch  flow_event_ramp_cpp_1.json.watch  flow_event_ramp_cpp_2.json.watch  flow_event_ramp_cpp_3.json.watch  flow_event_ramp_python_1.json.watch  flow_event_ramp_python_2.json.watch  flow_event_ramp_python_3.json.watch
benchmark_results/burst_120events_120sec/: flow_event.json.watch
benchmark_results/burst_20min_60events/trace_20250827_100326/: rss_tree_305794.csv
benchmark_results/burst_cpp_500events/: 1.json.watch  2.json.watch  3.json.watch
benchmark_results/burst_cpp_5min_10000events/: flow_event.json.watch
benchmark_results/burst_cpp_5min_6000events/: flow_event.json.watch
benchmark_results/idle/: flow_event_idle_cpp_2.json.watch  flow_event_idle_python_2.json
benchmark_results/idle_python/: flow_event_idle_cpp_1.json.watch  flow_event_idle_cpp_2.json  flow_event_idle_cpp_3.json.watch  flow_event_idle_python_3.json.watch
benchmark_results/ramp/: flow_event_ramp_cpp_1.json.watch  flow_event_ramp_cpp_2.json.watch  flow_event_ramp_cpp_3.json.watch
benchmark_results/ramp-python/: flow_event_ramp_python_3.json.watch
heidpi_logger_cpp_port2/: CMakeLists.txt
heidpi_logger_cpp_port2/include/: NDPIClient.hpp
heidpi_logger_cpp_port2/src/: EventProcessor.cpp  GeoIP.cpp  NDPIClient.cpp  main.cpp
port2-reduce-futex/include/: EventProcessor.hpp  GeoIP.hpp  Logger.hpp
port2-reduce-futex/src/: EventProcessor.cpp  Logger.cpp
utility/: analyze_watcher_file_overlead_python_version.py  analyze_watcher_files_cpp_burst.py  analyze_watcher_files_cpp_burst_compare.py  analyze_watcher_files_idle.py  analyze_watcher_files_ramp.py  benchmark_sequenz_diagramm.puml  detected_dropped_events.py  heiDPI-cpp_sequenzdiagramm.puml  heiDPI-python_sequenzdiagramm.puml
